fix horizontal overflow 3

--- a/style/style.css
+++ b/style/style.css
@@ -64,8 +64,6 @@ body {
     font-family: "Inter", sans-serif;
 
     max-width: 100vw;
-
-    overflow-x: hidden;
 }
 
 .title {
